# arq-sim

./: Cargo.toml  LICENSE  README.md  channel.py  config.py  main.py  metrics.py  requirements.txt  simulator.py  visualize.py
src/: __main__.py  channel.rs  common.rs  event_loop.rs  lib.rs  main.rs  simulation.rs
src/core/: channel_config.py  constants.py  engine.py  types.py  worker.py
src/layers/: link.py  link.rs  mod.rs  physical.py  physical.rs  transport.py
src/ui/: __init__.py  app.py
src/ui/panels/: __init__.py  controls.py  parameters.py  results.py  status.py
