[package]
name = "arq-sim"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

rand = "0.9"

dotenvy = "0.15"

futures = "0.3"
async-recursion = "1.1"

[dev-dependencies]
test-log = { version = "0.2", default-features = false, features = ["trace"] }
serial_test = "3"
